--- a/app/views/index.html
+++ b/app/views/index.html
@@ -3,10 +3,10 @@
     <div ui-view="sidebar"></div>
     <!-- uiView:  -->
     <section id="body-container">
-        <section ng-show="appModule == 'dashboard'" ng-controller="dashboardController" ng-include="'app/views/dashboard/dashboard.html'">...</section>
-        <!--<section ng-show="appModule == 'customers'" ng-controller="customerController" ng-include="'app/views/customers/customers.html'">...</section>-->
-        <div class="conter-wrapper" ng-show="appModule == 'customers'" ng-controller="customerController" ng-include="'app/views/customers/customers.html'">...</div>
-        <section ng-show="appModule == 'customer' && appAction" ng-controller="customerActionController" ng-include="'app/views/customers/customerAction.html'">...</section>
+        <section ng-show="appPModule == 'dashboard'" ng-controller="dashboardController" ng-include="'app/views/dashboard/dashboard.html'">...</section>
+        <!--<section ng-show="appPModule == 'customers'" ng-controller="customerController" ng-include="'app/views/customers/customers.html'">...</section>-->
+        <div class="conter-wrapper" ng-show="appPModule == 'customers'" ng-controller="customerController" ng-include="'app/views/customers/customers.html'">...</div>
+        <section ng-if="appPModule == 'customer' && appPAction" ng-controller="customerActionController" ng-include="'app/views/customers/customerAction.html'">...</section>
 
     </section>
 </section>
